# RpiKeyboardSwitcher

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .golangci.yml  Makefile  README.ja.md  README.md  Vagrantfile  compose.yaml  go.mod  go.sum  golangci-lint.mod
.github/workflows/: ci.yml
cmd/kbd/: main.go
cmd/kbd-hid/: main.go
cmd/kbd-rpi/: main.go
docker/hid-e2e/: Dockerfile  run.sh
examples/: config.local.yaml  config.rpi.yaml
internal/bluez/: agent.go  hid.go  hid_test.go  properties.go
internal/complete/: complete.go
internal/config/: config.go  config_test.go
internal/execx/: runner.go
internal/hidapp/: app.go  app_test.go
internal/hidreport/: report.go  report_test.go
internal/input/: descriptor.go  descriptor_test.go  forwarder_linux.go  forwarder_other.go  keyboard.go  keyboard_test.go
internal/localapp/: app.go  app_test.go
internal/rpiapp/: app.go  app_test.go
internal/state/: state.go
packer/: e2e-utm.pkr.hcl
packer/cloud-init/: meta-data  network-config  user-data
rpi/systemd/: kbd-hid.service
scripts/: hid-e2e.sh  install-packer-utm-plugin.sh  install-vagrant-utm-plugin.sh  provision-e2e-vm.sh
tools/: README.ja.md  README.md  bluez-agent.py  bluez-pair.py  hci-proxy.py  hidraw-cuse.c  pyproject.toml  pyrightconfig.json
tools/lib/: bluez_dbus.py
tools/stubs/dbus/: __init__.pyi  service.pyi
tools/stubs/dbus/mainloop/: glib.pyi
tools/stubs/gi/repository/: GLib.pyi
